<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ForgotPasswordActivity"
    tools:showIn="@layout/activity_forgot_password">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            >


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo_vertical"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password_question"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"
                android:textSize="@dimen/large_text"
                android:layout_margin="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password_message"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"
                android:textSize="@dimen/medium_text"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >
                <EditText
                    android:id="@+id/txtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_prompt"
                    android:drawableStart="@drawable/phone_icon"
                    android:drawablePadding="10dp"
                    android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/or"
                android:textColor="@color/colorBlack"
                android:textStyle="normal"
                android:layout_margin="20dp"
                android:textSize="20sp"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >
                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_prompt"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/fab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_corner"
                />

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>