<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MatchingsFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        >
        <LinearLayout
            android:id="@+id/llSegmentControl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/lblChoosing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:gravity="center"
                android:text="@string/choosing"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="1dp"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/lblMatching"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:gravity="center"
                android:text="@string/matching"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="1dp"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:id="@+id/lblMarried"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:gravity="center"
                android:text="@string/married"
                android:textColor="@color/colorBlack"
                android:layout_marginEnd="1dp"
                android:textSize="@dimen/medium_text" />

        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipe_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvMemberDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_choosing" />

        </android.support.v4.widget.SwipeRefreshLayout>



    </LinearLayout>


</FrameLayout>